# template_cpp_cpputest

./: .gitignore  CMakeLists.txt  README.md  env.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/readfile/: CMakeLists.txt  readfileTest.cpp
